# thesis

./: .gitignore  main.R  test.R
data/: location_map.json
functions/: assert_panel_keys.R  check_variable_diff.R  merge_dta_by_year.R
ideas/: .gitignore  Makefile  _quarto.yml  main.qmd  main.tex  preamble.tex  pyproject.toml  refs.bib  verify_binary_model.py  verify_model_results.py
ideas/en/: main.qmd
ideas/en/sections/: 01_intro.qmd  02_literature.qmd  03_setup.qmd  04_equilibria.qmd  05_timing.qmd  06_welfare.qmd  07_conclusion.qmd
ideas/scripts/: generate_figures.py  verify_model_results.py
ideas/sections/: 00_intro.qmd  01_intro.qmd  01_setup.qmd  02_benchmarks.qmd  02_literature.qmd  03_lm_equilibrium.qmd  03_setup.qmd  04_equilibria.qmd  04_timing_incentives.qmd  05_endogenous_timing.qmd  05_timing.qmd  06_welfare.qmd  07_summary_table.qmd  08_connection.qmd
ideas/summary/: _quarto.yml  preamble.tex  summary.qmd
ideas/zh/: main.qmd  preamble.tex
ideas/zh/sections/: 01_intro.qmd  02_literature.qmd  03_setup.qmd  04_equilibria.qmd  05_timing.qmd  06_welfare.qmd  07_conclusion.qmd
scripts/functions/: code_mappings.R  process_year_data.R
scripts/pipeline/: 01_clean_and_merge.R  01_merge_raw_data.R  02_impute_panel.R  02_variable_audit.R  03_clean_data.R  04_build_panel.R
