[tool.poetry]
name = "ideas"
version = "0.1.0"
description = "Thesis notes, figure generation, and verification scripts."
authors = ["Anthony Sung"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
matplotlib = "^3.10.7"
numpy = "^2.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
